--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,7 +1,8 @@
 .dashboard {
+  padding-top: 2rem;
   text-align: left;
-  margin-left: 3rem;
-
+  padding-left: 1rem;
+  width: 65%;
   /* display: flex;
   flex-direction: column;
   gap: 0rem; */
@@ -39,6 +40,7 @@ button {
   background-color: white;
   font-weight: bold;
   margin-top: 1rem;
+  cursor: pointer;
 }
 
 .colorList {
