--- a/src/styles/Drawer.css
+++ b/src/styles/Drawer.css
@@ -3,9 +3,11 @@
   display: flex;
   flex-direction: column;
   border-left: 5px solid black;
-  height: 100vh;
-  width: 35%;
+  height: 100%;
+  width: 30%;
   padding-left: 45px;
+  position: fixed;
+  right: 0;
 }
 
 .drawer header {
