--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,11 +1,11 @@
 .dashboard {
-  padding-top: 2rem;
+  margin-top: 5rem;
+  margin-bottom: 1rem;
   text-align: left;
   padding-left: 1rem;
   width: 65%;
-  /* overflow-y: scroll; */
-  min-height: 93vh;
-  height: 100%;
+  min-height: 83vh;
+  /* height: 100%; */
 }
 
 .title {
@@ -28,7 +28,7 @@ input[type="range"] {
 }
 
 .searchArea {
-  padding: 8px 5px;
+  padding: 8px 15px;
   border-radius: 5px;
   border: 2px solid rgb(197, 197, 197);
 }
