--- a/src/styles/Drawer.css
+++ b/src/styles/Drawer.css
@@ -1,13 +1,12 @@
 .drawer {
-  padding-top: 2rem;
-  display: flex;
-  flex-direction: column;
+  padding-top: 5rem;
   border-left: 5px solid black;
   height: 100%;
   width: 30%;
   padding-left: 45px;
   position: fixed;
   right: 0;
+  text-align: left;
 }
 
 .drawer header {
@@ -20,6 +19,10 @@
 
 .closeBtn {
   font-size: 2rem;
+}
+
+.closeBtn:hover {
+  cursor: pointer;
 }
 
 .inputSection {
